--- a/apps/userprofile/templates/core/login.html
+++ b/apps/userprofile/templates/core/login.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static '/scss/userprofile/login.css' %}" type="text/css">
+<script rel="stylesheet" src="{% static '/js/login.js' %}" type="text/javascript"></script>
 
 
 <div class="login">
@@ -36,10 +37,28 @@
             <button type='submit'>Logg inn</button>
         </div>
         <br>
+        <h1 class="forgot-pass" id="forgotPassBtn"><a href="javascript:void(0)" onclick="forgotPass()">Glemt passord?</a></h1>
         <br>
         <h1 class="or-signup">Eller <a href="/lag-bruker">lag bruker</a></h1>
     </form>
+    <div class="forgot-pass">
+        <form action="" method="POST" id="forgotPassForm">
+            <h1 class="heading">Glemt passord</h1>
+            <p>Skriv din epost under, så skal vi hjelpe deg</p>
+            <i onclick="forgotPassClose()" class="fa-solid fa-xmark"></i>
+            {% csrf_token %}
+            <div class="forgot-pass-form-inputs">
+                <label for="email2">Epost</label>
+                <br>
+                <input type="text" id="email2" name="email2" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
+            </div>
+            <div class="form-actions">
+                <button type='submit'>Send</button>
+            </div>
+        </form>
+    </div>
 </div>
+<div class="black-overlay" id="blackOverlay"></div>
 
 {% endblock %}
             
