--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -393,16 +393,6 @@ $loader: rgb(80, 104, 180);
         font-family: Inter, sans-serif;
         font-size: 16px;
         font-weight: 400;
-        height: auto;
-        line-height: 27px;
-        margin-block-end: 32px;
-        margin-block-start: 0px;
-        margin-bottom: 0;
-        margin-inline-end: 0px;
-        margin-inline-start: 0px;
-        margin-left: 0px;
-        margin-right: 0px;
-        margin-top: 0px;
       }
     }
   }
@@ -548,13 +538,176 @@ $loader: rgb(80, 104, 180);
         font-weight: 800;
       }
     }
+    // CHOOSE PRODUCT
     .choose-type-of-product-flex{
-      width: 100%;
-      display: flex;
       transform: translateY(25px);
+      display: flex;
+      opacity: 1;
+      pointer-events: visible;
+      width: 100%;
+      height: max-content;
+      transition: .3s;
+      &.hide{
+        pointer-events: none;
+        opacity: 0;
+        height: 0;
+      }
       p{
         opacity: 0.6;
         margin-inline: 18px;
+        margin-block: 0;
+        width: 80px;
+        padding: 7px;
+        text-align: center;
+        font-size: 15px;
+        transition: .2s;
+        transition: background-color 0;
+        border-radius: 28px;
+        &.click{
+          padding: 18px;
+        }
+        &#pers{
+          &.active{
+            background-color: #0088F9;
+            color: white;
+            opacity: 1;
+          }
+          &.unactive{
+            background-color: transparent;
+            opacity: 0.6;
+            color: black;
+          }
+        }
+        &#blog{
+          &.active{
+            background-color: #0088F9;
+            color: white;
+            opacity: 1;
+          }
+          &.unactive{
+            background-color: transparent;
+            opacity: 0.6;
+            color: black;
+          }
+        }
+        &#eco{
+          margin-left: 0;
+          &.active{
+            background-color: #0088F9;
+            color: white;
+            opacity: 1;
+          }
+          &.unactive{
+            background-color: transparent;
+            opacity: 0.6;
+            color: black;
+          }
+        }
+      }
+    }
+    // CHOOSE PRODUCT BLOG
+    .choose-type-of-productblog-flex{
+      display: flex;
+      opacity: 0;
+      pointer-events: none;
+      width: 100%;
+      height: 0;
+      transform: translateY(25px);
+      position: relative;
+      left: -20px;
+      &.show{
+        left: 0px;
+        pointer-events: visible;
+        opacity: 1;
+        height: max-content;
+        transition: .3s;
+      }
+      i{
+        font-size: 25px;
+        color: #0088F9;
+        text-align: center;
+        padding: 7px;
+      }
+      p{
+        opacity: 1;
+        margin-left: 12px;
+        margin-block: 0;
+        border-radius: 28px;
+        width: 80px;
+        padding: 7px;
+        text-align: center;
+        font-size: 15px;
+        transition: .2s;
+        transition: background-color 0;
+        background-color: #0088F9;
+        color: white;
+      }
+    }
+    // CHOOSE PRODUCT PERSONAL
+    .choose-type-of-productpers-flex{
+      display: flex;
+      opacity: 0;
+      pointer-events: none;
+      width: 100%;
+      height: 0;
+      transform: translateY(25px);
+      position: relative;
+      left: -20px;
+      &.show{
+        left: 0px;
+        pointer-events: visible;
+        opacity: 1;
+        height: max-content;
+        transition: .3s;
+      }
+      i{
+        font-size: 25px;
+        color: #0088F9;
+        text-align: center;
+        padding: 7px;
+      }
+      p{
+        opacity: 1;
+        margin-left: 12px;
+        margin-block: 0;
+        border-radius: 28px;
+        width: 80px;
+        padding: 7px;
+        text-align: center;
+        font-size: 15px;
+        transition: .2s;
+        transition: background-color 0;
+        background-color: #0088F9;
+        color: white;
+      }
+    }
+    // CHOOSE PRODUCT ECOMMERCE
+    .choose-type-of-producteco-flex{
+      display: flex;
+      opacity: 0;
+      pointer-events: none;
+      min-width: 100%;
+      height: 0;
+      transform: translateY(25px);
+      position: relative;
+      left: -20px;
+      &.show{
+        left: 0px;
+        pointer-events: visible;
+        opacity: 1;
+        height: max-content;
+        transition: .3s;
+      }
+      i{
+        font-size: 25px;
+        color: #0088F9;
+        text-align: center;
+        padding: 7px;
+      }
+      p{
+        opacity: 0.6;
+        margin-inline: 18px;
+        margin-block: 0;
         border-radius: 28px;
         width: 80px;
         padding: 7px;
@@ -563,7 +716,7 @@ $loader: rgb(80, 104, 180);
         transition: .2s;
         transition: background-color 0;
         &.click{
-          padding: 18px;
+          transform: scale(1.3);
         }
         &#big{
           &.active{
@@ -590,7 +743,7 @@ $loader: rgb(80, 104, 180);
           }
         }
         &#small{
-          margin-left: 0;
+          margin-left: 12px;
           background-color: #0088F9;
           color: white;
           opacity: 1;
@@ -609,7 +762,182 @@ $loader: rgb(80, 104, 180);
     }
     .product-section{
       margin-top:20px;
-      .product{
+      // BLOG PRODUCT
+      .productblog{
+        margin: 40px 0;
+        text-align: left;
+        background: transparent;
+        width: 100%;
+        max-width: 340px;
+        box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.224);
+        padding: 28px;
+        border-radius: 10px;
+        .product-row-one{
+          width: 100%;
+          display: flex;
+          position: relative;
+          .product-name{                
+            width: 88%;
+            font-size: 23px;
+            color: #183B56;
+            font-weight: 800;
+            text-shadow: 1px 0 #183B56;
+            letter-spacing:1px; 
+          }
+          .product-price{
+            color: black;
+            opacity: 0.5;
+            font-size: 15px;
+            width: 12%;
+            transform: translateY(3px) translateX(-18px);
+            border-bottom: 2px solid #0088F9;
+          }
+        }
+        .product-row-two{
+          width: 100%;
+          transform: translateY(0);
+          .flex{
+            width: 100%;
+            display: flex;
+            margin-block: 16px;
+            transform: translateX(-6px);
+            .icon{
+              transform: translateY(-5px);
+              i{
+                color: rgb(28, 211, 28);
+                font-size: 13px;
+              }
+            }  
+            p{
+              font-size: 14px;
+              color: #1B1B1B;
+              margin: 0 15px;
+              opacity: 0.8;
+              transform: translateY(1px);
+            }
+          }
+        }
+        p{
+          color: #183B56;
+          font-size: 15px;
+          width: 100%;
+          span{
+            font-weight: 800;
+          }
+      }
+        &.blog{
+          display: none;
+          transition: .2s;
+          transform: scale(0.9);
+          .flex{
+            .icon{
+              padding: 0 5.5px;
+              padding-bottom: 0;
+              i{
+                transform: translateY(3px);
+              }
+            }
+            p{
+              transform: translateX(-7px);
+            }
+          }
+          &.active{
+            display: block;
+          }
+          &.scale{
+            transform: scale(1);
+          }
+        }
+      }
+      // PERS PRODUCT
+      .productpers{
+        margin: 40px 0;
+        text-align: left;
+        background: transparent;
+        width: 100%;
+        max-width: 340px;
+        box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.224);
+        padding: 28px;
+        border-radius: 10px;
+        .product-row-one{
+          width: 100%;
+          display: flex;
+          position: relative;
+          .product-name{                
+            width: 88%;
+            font-size: 23px;
+            color: #183B56;
+            font-weight: 800;
+            text-shadow: 1px 0 #183B56;
+            letter-spacing:1px; 
+          }
+          .product-price{
+            color: black;
+            opacity: 0.5;
+            font-size: 15px;
+            width: 12%;
+            transform: translateY(3px) translateX(-18px);
+            border-bottom: 2px solid #0088F9;
+          }
+        }
+        .product-row-two{
+          width: 100%;
+          transform: translateY(0);
+          .flex{
+            width: 100%;
+            display: flex;
+            margin-block: 16px;
+            transform: translateX(-6px);
+            .icon{
+              transform: translateY(-5px);
+              i{
+                color: rgb(28, 211, 28);
+                font-size: 13px;
+              }
+            }  
+            p{
+              font-size: 14px;
+              color: #1B1B1B;
+              margin: 0 15px;
+              opacity: 0.8;
+              transform: translateY(1px);
+            }
+          }
+        }
+        p{
+          color: #183B56;
+          font-size: 15px;
+          width: 100%;
+          span{
+            font-weight: 800;
+          }
+      }
+        &.pers{
+          display: none;
+          transition: .2s;
+          transform: scale(0.9);
+          .flex{
+            .icon{
+              padding: 0 5.5px;
+              padding-bottom: 0;
+              i{
+                transform: translateY(3px);
+              }
+            }
+            p{
+              transform: translateX(-7px);
+            }
+          }
+          &.active{
+            display: block;
+          }
+          &.scale{
+            transform: scale(1);
+          }
+        }
+      }
+      // ECOMMERCE PRODUCT
+      .producteco{
         margin: 40px 0;
         text-align: left;
         background: transparent;
@@ -698,9 +1026,9 @@ $loader: rgb(80, 104, 180);
           }
       }
         &.small{
-          display: block;
+          display: none;
           transition: .2s;
-          transform: scale(1);
+          transform: scale(0.9);
           .flex{
             .icon{
               padding: 0 5.5px;
@@ -714,13 +1042,10 @@ $loader: rgb(80, 104, 180);
             }
           }
           &.active{
-            display: none;
+            display: block;
           }
           &.scale{
             transform: scale(1);
-          }
-          &.scale-{
-            transform: scale(0.9);
           }
         }
         &.middle{
@@ -775,27 +1100,7 @@ $loader: rgb(80, 104, 180);
 }
 // // TABLET
 @media only screen and (min-device-width: 768px) {
-// CONTACT US
-.contact-us{
-  form{
-    max-width: 560px;
-    .form-tag-navn{
-      left: 20px;
-      top: 24px;
-    }
-    .form-tag-email{
-      left: 20px;
-      top: 92px;
-    }
-    .form-tag-message{
-      left: 20px;
-      top: 165px;
-    }
-    input{
-      padding: 10px;
-    }
-  }
-}
+
 }
 // // SMALL DESKTOP
 @media only screen and (min-device-width: 1024px) {
