--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -46,7 +46,6 @@ body{
   align-items: center;
   border-radius: 4px;
   padding: 10px 13px;
-
   i{
     font-size: 19px;
     color: white;
@@ -66,11 +65,11 @@ body{
 // COVER
 .cover{
   width: 100%;
-  height: 133vh;
+  height: 900px;
   background: linear-gradient(to top right, white, white, #EDF3F8 85%, #EDF3F8 85%, white);
   .content{
     width: 100%;
-    height: 133vh;
+    height: auto;
     text-align: center;
     transform: translateY(100px);
     padding: 10px;
@@ -149,8 +148,8 @@ body{
       display: flex;
       justify-content: center;
       align-items: center;
-      position: absolute;
-      bottom: 115px;
+      position: relative;
+      top: 90px;
       img{
         height: auto;
         width: 110%;
