--- a/static/scss/userprofile/login.scss
+++ b/static/scss/userprofile/login.scss
@@ -64,6 +64,179 @@ $loader: rgb(80, 104, 180);
             font-size: 13px;
             color: #183B56;
             font-weight: 800;
+          }
+          .forgot-pass{
+            font-size: 13px;
+            color: #183B56;
+            font-weight: 800;
         }
       }
-}
+      // FORGOT PASS
+          form{
+      margin: 0 auto;
+      text-align: left;
+      background: transparent;
+      width: 93%;
+      max-width: 700px;
+      box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.224);
+      padding: 20px;
+      border-radius: 7px;
+      transform: translateY(110px);
+      background: white;
+        // LOGIN HEADING
+        .heading{
+          color: #183B56;
+          font-size: 22px;
+          font-weight: 800;
+          text-shadow: 1px 0 #183B56;
+          letter-spacing:1px; 
+        }
+        .login-form-inputs{
+          label{
+            color: #183B56;
+            font-size: 15px;
+            font-weight: 800;
+          }
+          input{
+            padding: 5px;
+            border-radius: 4px;
+            border: 2px solid #0089f91f;
+            outline: none;
+            color: #183B56;
+            font-size: 13px;
+            width: 82%;
+            max-width: 500px;
+            font-weight: 600;
+            height: 45px;
+          }
+        }
+        // LOGIN FORM ACTIONS
+        .form-actions{
+          margin-top: 23px;
+          button{
+            border-radius: 4px;
+            width: 200px;
+            font-size: 16px;
+            padding: 10px;
+            transition: all .2s ease-in-out;
+            color: white;
+            outline: none;
+            border: none;
+            border: none;    
+            background: #0082ec;  
+          }
+        }
+        .or-signup{
+            font-size: 13px;
+            color: #183B56;
+            font-weight: 800;
+          }
+          .forgot-pass{
+            font-size: 13px;
+            color: #183B56;
+            font-weight: 800;
+        }
+      }
+      // FORGOT PASS
+      .forgot-pass{
+        z-index: 100000000000000000000;
+        position: relative;
+        form{
+          position: fixed;
+          top: 50%;
+          left: 50%;
+          transform: translateX(-50%) translateY(-70%) scale(0.9);
+          margin: 0 auto;
+          text-align: left;
+          background: transparent;
+          width: 93%;
+          max-width: 700px;
+          box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.224);
+          padding: 20px;
+          border-radius: 7px;
+          background: white;
+          opacity: 0;
+          pointer-events: none;
+          &.active{
+            opacity: 1;
+            pointer-events: all;
+            transition: .3s;
+            transform: translateX(-50%) translateY(-50%) scale(1);
+          }
+            // FORGOT PASS HEADING
+            .heading{
+              color: #183B56;
+              font-size: 22px;
+              font-weight: 800;
+              text-shadow: 1px 0 #183B56;
+              letter-spacing:1px; 
+            }
+            p{
+              box-sizing: border-box;
+              color: rgb(90, 115, 134);
+              display: block;
+              font-family: Inter, sans-serif;
+              font-size: 15px;
+              font-weight: 400;
+              margin-bottom: 25px;
+              transform: translateY(15px);
+            }
+            i{
+              position: absolute;
+              right: 20px;
+              top: 24px;
+              font-size: 24px;
+              color: #183B56;
+              font-weight: 800;
+            }
+            .forgot-pass-form-inputs{
+              label{
+                color: #183B56;
+                font-size: 15px;
+                font-weight: 800;
+              }
+              input{
+                padding: 5px;
+                border-radius: 4px;
+                border: 2px solid #0089f91f;
+                outline: none;
+                color: #183B56;
+                font-size: 13px;
+                width: 82%;
+                max-width: 500px;
+                font-weight: 600;
+                height: 45px;
+              }
+            }
+            // FORGOT PASS FORM ACTIONS
+            .form-actions{
+              margin-top: 23px;
+              button{
+                border-radius: 4px;
+                width: 200px;
+                font-size: 16px;
+                padding: 10px;
+                transition: all .2s ease-in-out;
+                color: white;
+                outline: none;
+                border: none;
+                border: none;    
+                background: #0082ec;  
+              }
+            }
+          }
+      }
+    }
+    .black-overlay{
+      background: rgba(0, 0, 0, 0.562);
+      width: 100%;
+      height: 10000000000000px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: none;
+      z-index: 100;
+      &.show{
+          display: block;
+      }
+  }
